added a settings button on the chat page with the use of react router it goes to another page

--- a/src/Components/Navigation Bar/NavBar.css
+++ b/src/Components/Navigation Bar/NavBar.css
@@ -29,7 +29,16 @@
     background-position:center;
     display: flex;
     background-repeat:no-repeat ;
-    float:right;
+    float:Left;
+}
+
+.LogOut{
+    background-size: 40px;
+    background-color: black;
+    background-position:center;
+    display: flex;
+    background-repeat:no-repeat ;
+    float:right;  
 }
   
   li a {
