--- a/src/Components/Chat/Chat.css
+++ b/src/Components/Chat/Chat.css
@@ -1,3 +1,27 @@
 .chatting{
     color:rgb(240, 236, 236);
 }
+
+.settings{
+    background: url("../Images/settings.png");
+    background-size: 60px;
+   color:rgb(20, 57, 98) ;
+   font-weight: 800;
+    background-position:center;
+    display: flex;
+    background-repeat:no-repeat ;
+    width: 60px;
+    height: 60px;
+    border-radius: 15px;
+    outline: 0;
+    right:0;
+    bottom:   0;
+    position: absolute;
+}
+
+.settings:hover{
+    background-color: rgb(12, 12, 12);
+    color: rgb(2, 2, 2);
+    opacity: .6;
+    text-shadow: 1px 1px 2px rgb(226, 222, 222), 0 0 25px rgb(241, 241, 250), 0 0 5px rgb(208, 208, 216);
+}
